fixes some form layout issues

--- a/wp-content/themes/theme/assets/bundle.css
+++ b/wp-content/themes/theme/assets/bundle.css
@@ -1889,7 +1889,7 @@ textarea,
   background-position: center;
   background-size: cover;
   position: relative;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   margin-bottom: 50px;
 }
 	.med .inner .label {
@@ -1923,7 +1923,7 @@ textarea,
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url('http://placehold.it/350x250');
-  box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   position: relative;
   margin-bottom: 70px;
 }
@@ -2113,6 +2113,13 @@ textarea,
 	textarea:focus {
   border: 1px solid hsla(0, 0%, 20%, 1);
 }
+	input[type=submit] {
+	cursor: pointer
+}
+	input[type=submit]:hover {
+  background-color: hsla(116, 45%, 50%, 1);
+  color: hsla(0, 0%, 100%, 1);
+}
 	select {
 	width: 100%;
 	border: 1px solid hsla(116, 45%, 50%, 1);
@@ -2145,7 +2152,7 @@ textarea,
   left: 0;
   white-space: nowrap;
   background: #0b0b0b;
-  background: rgba(0, 0, 0, .9);
+  background: rgba(0, 0, 0, 0.9);
   outline: none !important;
   opacity: 0;
   -webkit-transition: opacity 0.3s ease;
@@ -2231,7 +2238,7 @@ textarea,
   width: auto;
   height: auto;
   z-index: -1;
-  box-shadow: 0 0 8px rgba(0, 0, 0, .6);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 	.lity-close {
   z-index: 9994;
@@ -2250,7 +2257,7 @@ textarea,
   font-size: 35px;
   font-family: Arial, Baskerville, monospace;
   line-height: 35px;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
   border: 0;
   background: none;
   outline: none;
@@ -2272,7 +2279,7 @@ textarea,
   font-size: 35px;
   font-family: Arial, Baskerville, monospace;
   line-height: 35px;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
   border: 0;
   background: none;
   outline: none;
@@ -2314,7 +2321,7 @@ textarea,
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 0 8px rgba(0, 0, 0, .6);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
   background: #000;
 }
 	.lity-hide {
@@ -2747,7 +2754,7 @@ textarea,
 	.events .single-event .image {
   margin-bottom: 20px;
   border-bottom: 2px solid hsla(116, 45%, 50%, 1);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 	.events .single-event img {
   max-width: 100%;
@@ -2813,13 +2820,15 @@ textarea,
 	.mangement .inner img {
   height: auto;
   width: 100%;
-  box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, .41);
+  box-shadow: 0px 3px 10px -2px rgba(0,0,0,0.41);
   border-bottom: 2px solid hsla(116, 45%, 50%, 1);
 }
 	.mangement .inner .bio {
   color: hsla(0, 0%, 20%, 1);
 }
 	.request-product-information {
+
+
 }
 	.request-product-information .bluehero {
   background-image: url('../assets/images/rpi__hero-bg.jpg');
@@ -2844,7 +2853,7 @@ textarea,
 	/*––––
 	Modifies RPI Ninja Form
 	––––––––––––––––––––––––––––*/
-	.nf-form-fields-required {
+	.ninja-forms-required-items {
 		display: none;
 	}
 	.nf-error-msg {
@@ -2862,6 +2871,37 @@ textarea,
 	.label-hidden .nf-field-element {
 		width: auto !important;
 	}
+	#ninja_forms_form_8 {
+	}
+	#ninja_forms_form_8 .list-checkbox-wrap.label-left label {
+  float: none;
+  display: block;
+}
+	#ninja_forms_form_8 .list-checkbox-wrap.label-left ul li {
+  float: none;
+}
+	#ninja_forms_form_8 .ninja-forms-form-wrap input {
+  vertical-align: top;
+}
+	#ninja_forms_form_8 input[type=submit] {
+  cursor: pointer;
+}
+	#ninja_forms_form_8 input[type=submit]:hover {
+  background-color: hsla(116, 45%, 50%, 1);
+  color: hsla(0, 0%, 100%, 1);
+}
+	#ninja_forms_field_22 {
+		height: 120px;
+	}
+	.checkbox-wrap label {
+		font-weight: normal;
+	}
+	#ninja_forms_field_23_label {
+	font-weight: normal;
+}
+	#ninja_forms_field_6_label {
+	font-weight: normal;
+}
 	.email-sign-up {
 }
 	.email-sign-up .bluehero {
